--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,12 @@ jobs:
 
     # Any prerequisite steps
     - uses: actions/checkout@master
-    - run: git clone https://github.com/batunpc/palpatine
-    - run: cd palpatine && mkdir build && cd build && cmake .. && make && cd ./app && mkdir web/dist ./palpatine -o web -i ../../../
+    - run: mkdir -p ./build/dist && ./palpatine -i ./files -o ./build
     # Deploy to local repo
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
         REPO: self
         BRANCH: gh-pages
-        FOLDER: build/app/website
+        FOLDER: build/dist/
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
